added retreats page

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,5 +1,9 @@
 @import "~bulma/sass/utilities/initial-variables"
 @import "./footer"
+@import "../templates/templates-common"
+
+
+
 
 // Config vars
 // Kaldi logo brand color: #FD461E
@@ -122,13 +126,6 @@ $menu-label-color: $white-ter
 .blog-list-item .featured-thumbnail
   flex-basis: 35%;
   margin: 0 1.5em 0 0;
-
-
-.page-header
-  padding: 1rem;
-  box-shadow: -1px -1px 20px 1px rgba(231, 166, 26,0.58);
-  background-color: rgba(231, 166, 26, 0.6);
-  color: black;
 
 
 @import "~bulma"
