--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -1,6 +1,8 @@
 .footer {
   .logo {
+    width: 14em;
+    height: 10em;
     box-shadow: inset 0px 22px 56px -21px rgba(231, 166, 26, 0.6),
-      0px 0px 17px 1px rgba(231, 166, 26, 0.2);
+      0px 0px 17px 1px #e7a61a33;
   }
 }
