Added event navigation and pages

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -18,6 +18,17 @@ $black: #2b2523
 .navbar .navbar-menu
   box-shadow:none !important
 
+
+// Main event styles
+$main-event-background-color: rgba(231, 166, 26, 0.58)
+.event-site
+  background-color: $main-event-background-color
+
+.event-site .navbar 
+  background-color: $main-event-background-color
+
+
+
 .content .taglist
   list-style: none
   margin-bottom: 0
