--- a/src/styles/utility.scss
+++ b/src/styles/utility.scss
@@ -1,3 +1,21 @@
 .display-flex {
   display: flex;
 }
+
+.align-items-center {
+  align-items: center;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.flex-centerize {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex-column {
+  flex: column;
+}
