--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,3 +3,9 @@ $purple: rgb(128, 59, 237);
 $green: rgb(100, 210, 110);
 $blue: rgb(79, 135, 238);
 $red: rgb(216, 80, 121);
+
+/* Screen Size Breakpoints */
+$screen-xs: 576px;
+$screen-sm: 767px;
+$screen-md: 991px;
+$screen-lg: 1999px;
