--- a/src/styles/utility.scss
+++ b/src/styles/utility.scss
@@ -24,6 +24,10 @@
   justify-content: space-between;
 }
 
+.flex-justify-end {
+  justify-content: flex-end;
+}
+
 .flex-column {
   flex-direction: column;
 }
