--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -20,30 +20,7 @@ $black: #2b2523
   box-shadow:none !important
 
 
-// Main event styles
-$main-event-background-color: rgba(231, 166, 26, 0.58)
-.event-site
-  background-color: $main-event-background-color
 
-.event-site .navbar 
-  background-color: $main-event-background-color
-
-
-
-.content .taglist
-  list-style: none
-  margin-bottom: 0
-  margin-left: 0
-  margin-right: 1.5rem
-  margin-top: 1.5rem
-  display: flex
-  flex-wrap: wrap
-  justify-content: left
-  align-items: center
-  li
-    padding: 0 2rem 1rem 0
-    margin-bottom: 1.5rem
-    margin-top: 0
 
 // Helper Classes
 .full-width-image-container
@@ -155,3 +132,9 @@ $menu-label-color: $white-ter
     text-align: center;
     max-width: 70%;
     margin: 0 0 1em;
+
+
+// at the bottom in order to overwrite current file
+@import "../styles/base"
+
+
