--- a/src/components/InnerPageLayout.scss
+++ b/src/components/InnerPageLayout.scss
@@ -14,6 +14,19 @@
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
 
+  .subpage-header {
+    font-weight: bold;
+  }
+
+  .page-section {
+    margin: 10px 0;
+  }
+
+  .hollow-arrow {
+    margin: 10px 0 20px 30px;
+    transform: scale(1, -0.5);
+  }
+
   .left-section {
     max-height: 100vh;
     overflow: hidden;
