--- a/src/components/InnerPageLayout.scss
+++ b/src/components/InnerPageLayout.scss
@@ -29,13 +29,14 @@
 
   .left-section {
     max-height: 100vh;
-    overflow: hidden;
+    // overflow: hidden;
     padding: 20px;
     z-index: 20;
 
     .inner-page-content-container {
       position: relative;
       max-height: 100%;
+      padding: 40px 0 0 0;
     }
 
     .inner-page-content {
