Added inner page descriptions below mobile cards

--- a/src/components/InnerPageLayout.scss
+++ b/src/components/InnerPageLayout.scss
@@ -22,9 +22,9 @@
     margin: 10px 0;
   }
 
-  .hollow-arrow {
+  .hollow-arrow-wrapper {
     margin: 10px 0 20px 30px;
-    transform: scale(1, -0.5);
+    transform: scale(1, 0.5);
   }
 
   .left-section {
