--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,4 +1,7 @@
 /* Colors */
+$main-text: black;
+$secondary-text: lighten($main-text, 50);
+
 $purple: rgb(74, 60, 127);
 $green: rgb(76, 132, 67);
 $blue: rgb(29, 38, 78);
