--- a/src/templates/index-page.scss
+++ b/src/templates/index-page.scss
@@ -1,3 +1,5 @@
+@import "../styles/vars";
+
 .index-page {
   background-image: url("/img/sky.jpg");
   background-position: center; /* Center the image */
@@ -41,7 +43,19 @@
     text-align: center;
   }
 
-  .links-list .btn {
-    margin: 10px;
+  // .links-list .btn {
+  //   margin: 10px;
+  // }
+
+  .inner-pages-description {
+    margin: -5px 0 0 0;
+    text-transform: uppercase;
+    font-size: 12px;
+    letter-spacing: -1px;
+    color: $secondary-text;
+
+    > div {
+      margin: 0 12px 0 0;
+    }
   }
 }
