--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,7 +2,7 @@
 @import "./footer"
 @import "../templates/templates-common"
 @import "../styles/utility"
-@import "../styles/modules"
+@import "../styles/modules/modules"
 
 
 
