--- a/src/styles/modules/inner-pages-row-underline-display.scss
+++ b/src/styles/modules/inner-pages-row-underline-display.scss
@@ -3,13 +3,13 @@
 .inner-pages-row-underline-display {
   display: flex;
   justify-content: flex-start;
-  margin: -5px 0 0 0;
+  margin: -5px 0 0 4px;
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: -1px;
   color: $secondary-text;
 
-  > * {
+  > *:not(:last-child) {
     margin: 0 12px 0 0;
   }
 }
