--- a/src/components/NavigationMap.scss
+++ b/src/components/NavigationMap.scss
@@ -28,6 +28,80 @@
       transition: 1s opacity;
     }
 
+    .image-map-container {
+      position: relative;
+      height: 100vh;
+      width: 100vw;
+
+      img {
+        opacity: 0;
+      }
+      // .image-map {
+      //   z-index: 99991;
+      //   position: absolute;
+      //   top: 0;
+      //   left: 0;
+      //   transform: scale(0.5);
+      //   // height: auto;
+      //   // max-width: 100%;
+      //   // min-width: 2880px;
+      //   // min-height: 1800px;
+      //   // min-width: 300px;
+      //   // min-height: 300px;
+      //   height: 2000px;
+      //   width: 2000px;
+
+      //   area {
+      //     z-index: 99999;
+      //     transform: scale(0.5);
+      //     // display: inline;
+      //     background-color: red;
+      //     // min-width: 100px;
+      //     // min-height: 100px;
+      //     height: 2000px;
+      //     width: 2000px;
+      //   }
+      // }
+
+      // .svg-map-segment {
+      // background-color: transparent;
+      svg {
+        position: absolute;
+        // top: 8%;
+        // left: 8%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(1.2);
+        // height: 100vh;
+        // width: 100vw;
+        height: 100%;
+        width: 100%;
+        // transform: translate(34%, 36%) scale(1.5);
+        background-color: red;
+        opacity: 0.2;
+
+        polygon {
+          opacity: 0.3;
+
+          &:not(.active-link) {
+            &:hover {
+              opacity: 0.7;
+            }
+          }
+        }
+        // height: 100%;
+        // width: auto;
+        // height: 600px;
+        // width: 1880px;
+
+        // background-color: transparent;
+        z-index: 99999;
+        // height: 200px;
+        // width: 200px;
+      }
+      // }
+    }
+
     .logo,
     .link-container {
       position: absolute;
