--- a/src/components/NavigationMap.scss
+++ b/src/components/NavigationMap.scss
@@ -46,10 +46,11 @@
         // filter: drop-shadow(4px 4px 14px rgba(0, 0, 0, 0.9));
 
         polygon {
-          opacity: 0.05;
+          opacity: 0.1;
           transition: 0.3s;
+          fill: url(#MyGradient);
 
-          &:not(.active-link) {
+          &:not(.unhovereable-mask) {
             &:hover {
               opacity: 0.3;
               transition: 0.3s;
