--- a/src/styles/modules/inner-pages-row-underline-display.scss
+++ b/src/styles/modules/inner-pages-row-underline-display.scss
@@ -3,10 +3,10 @@
 .inner-pages-row-underline-display {
   display: flex;
   justify-content: flex-start;
-  margin: -5px 0 0 4px;
   text-transform: uppercase;
-  font-size: 12px;
-  letter-spacing: -1px;
+  // font-size: 11px;
+  font-size: 0.7em;
+  letter-spacing: -0.4px;
   color: $secondary-text;
 
   > *:not(:last-child) {
