--- a/src/components/NavigationMap.scss
+++ b/src/components/NavigationMap.scss
@@ -20,8 +20,11 @@
       left: 50%;
       min-width: 100%;
       min-height: 100%;
-      max-width: none; // override all.scss
+      max-width: 100vw; //none; // override all.scss
+      // min-height: 100vh; //none; // override all.scss
+      // max-height: 100vh; //none; // override all.scss
       width: auto;
+      // height: 100vh;
       height: auto;
       z-index: -100;
       transform: translateX(-50%) translateY(-50%);
@@ -114,7 +117,7 @@
         }
       }
 
-      img {
+      .dummy-img-for-size {
         opacity: 0;
       }
     }
@@ -209,5 +212,18 @@
     height: auto;
     width: 4em;
     transform: translate(-8%, 0);
+  }
+  .bg-rescue {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    // height: 100vh;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
+    background-size: cover;
   }
 }
