--- a/src/styles/modules/inner-pages-row-underline-display.scss
+++ b/src/styles/modules/inner-pages-row-underline-display.scss
@@ -5,8 +5,8 @@
   justify-content: flex-start;
   text-transform: uppercase;
   // font-size: 11px;
-  font-size: 0.7em;
-  letter-spacing: -0.4px;
+  font-size: 0.74em;
+  // letter-spacing: -0.4px;
   color: $secondary-text;
 
   > *:not(:last-child) {
