--- a/src/styles/modules/inner-pages-row-underline-display.scss
+++ b/src/styles/modules/inner-pages-row-underline-display.scss
@@ -5,11 +5,18 @@
   justify-content: flex-start;
   text-transform: uppercase;
   // font-size: 11px;
-  font-size: 0.74em;
+  font-size: 0.6em;
   // letter-spacing: -0.4px;
   color: $secondary-text;
 
-  > *:not(:last-child) {
-    margin: 0 12px 0 0;
+  &:not(.long-link-lines) {
+    > *:not(:last-child) {
+      margin: 0 12px 0 0;
+    }
+  }
+  &.long-link-lines {
+    > *:not(:last-child) {
+      margin: 0 6px 0 0;
+    }
   }
 }
