changes to first page design

--- a/src/components/NavigationMap.scss
+++ b/src/components/NavigationMap.scss
@@ -55,7 +55,7 @@
 
           &:not(.unhovereable-mask) {
             &:hover {
-              opacity: 0.3;
+              opacity: 0.2;
               transition: 0.3s;
             }
           }
@@ -88,6 +88,7 @@
 
         .link-description {
           margin: 10% 3% 0 5%;
+          color: #4e4e4e;
 
           &:first-child {
             margin: 10% 0 0 10%;
