--- a/src/templates/index-page.scss
+++ b/src/templates/index-page.scss
@@ -33,9 +33,9 @@
   }
 
   .header-text {
-    margin: 1.3rem 0;
-    font-size: 1.4rem;
-    text-align: center;
+    margin: 1.3rem 0.4rem;
+    font-size: 1rem;
+    font-weight: 200;
   }
 
   // .links-list .btn {
