--- a/src/templates/index-page.scss
+++ b/src/templates/index-page.scss
@@ -38,6 +38,16 @@
     font-weight: 200;
   }
 
+  .inner-pages-row-underline-display {
+    color: black;
+    margin: 1px 0 0 0;
+    font-size: 0.7em;
+  }
+
+  a.column {
+    padding: 3px 0 0 0;
+  }
+
   // .links-list .btn {
   //   margin: 10px;
   // }
