--- a/src/templates/index-page.scss
+++ b/src/templates/index-page.scss
@@ -36,6 +36,7 @@
     margin: 1.3rem 0.4rem;
     font-size: 1rem;
     font-weight: 200;
+    line-height: 1em;
   }
 
   .inner-pages-row-underline-display {
