--- a/src/templates/index-page.scss
+++ b/src/templates/index-page.scss
@@ -37,6 +37,11 @@
     font-size: 1rem;
     font-weight: 200;
     line-height: 1em;
+
+    p {
+      margin-block-start: 0;
+      margin-block-end: 0;
+    }
   }
 
   .inner-pages-row-underline-display {
