--- a/src/templates/index-page.scss
+++ b/src/templates/index-page.scss
@@ -33,7 +33,7 @@
   }
 
   .header-text {
-    margin: 1.3rem 0.4rem;
+    margin: 1.3rem 0.4rem 1.3rem 0;
     font-size: 0.9rem;
     font-weight: 200;
     line-height: 1.3em;
