--- a/src/templates/index-page.scss
+++ b/src/templates/index-page.scss
@@ -54,7 +54,15 @@
     padding: 3px 0 0 0;
   }
 
-  // .links-list .btn {
-  //   margin: 10px;
-  // }
+  @media only screen and (max-width: $medium-screen) and (min-width: $small-screen) {
+    .links-list {
+      display: block;
+    }
+
+    .header-text {
+      font-size: 1.3em;
+      text-align: center;
+      line-height: 1.5em;
+    }
+  }
 }
