cahnges to config yaml

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -138,4 +138,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
     left: 0;
     background: rgba(181, 198, 222, 0.3);
   }
+
+  .navbar-item {
+    opacity: 0.4;
+  }
 }
