--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -110,7 +110,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 1.4em 3.1em 0;
+    padding: 1.4em 0 0 3.1em;
     font-size: 1.15em;
   }
 
@@ -121,6 +121,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
   /* Wrapper for item list */
   .bm-item-list {
+    position: relative;
     padding: 0;
     color: #b8b7ad;
   }
@@ -141,5 +142,11 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
   .navbar-item {
     opacity: 0.4;
+  }
+
+  .bottom-nav {
+    position: absolute;
+    bottom: 10px;
+    font-size: 10px;
   }
 }
