--- a/src/components/NavigationMap.scss
+++ b/src/components/NavigationMap.scss
@@ -238,6 +238,12 @@
       }
     }
   }
+  .whtif-logo,
+  .terms {
+    position: absolute;
+    height: auto;
+    width: 4em;
+  }
   .whtif-logo {
     position: absolute;
     bottom: 3%;
@@ -245,6 +251,15 @@
     height: auto;
     width: 4em;
     transform: translate(-8%, 0);
+  }
+  .terms {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    height: auto;
+    width: 20em;
+    transform: translate(-9%, 0);
+    font-size: 10px;
   }
   .bg-rescue {
     position: fixed;
