--- a/src/components/InnerPageLayout.scss
+++ b/src/components/InnerPageLayout.scss
@@ -23,6 +23,14 @@
       position: relative;
       max-height: 100%;
       padding: 40px 0 0 0;
+
+      h3 {
+        font-size: 0.8em;
+      }
+
+      p {
+        font-size: 0.7em;
+      }
     }
 
     .inner-page-content {
@@ -123,6 +131,7 @@
       p {
         margin-block-start: 0;
         margin-block-end: 0;
+        font-size: 0.8em;
       }
     }
 
@@ -168,7 +177,7 @@ blockquote {
   font-family: Open Sans;
   font-style: italic;
   color: #555555;
-  padding: 1.2em 30px 1.2em 75px;
+  padding: 1.2em 12px 1.2em 50px;
   border-left: 8px solid #78c0a8;
   line-height: 1.6;
   position: relative;
