--- a/src/components/InnerPageNav.scss
+++ b/src/components/InnerPageNav.scss
@@ -40,17 +40,18 @@
 
   .nav-pane {
     top: 70px;
-    left: 15vw;
-    // right: calc(50% + 4vw);
+    left: 22vw;
+    transform: translateX(-30%);
     z-index: 20;
 
     .link-text {
       text-transform: uppercase;
       color: rgb(168, 168, 170);
+      font-size: 0.8em;
+      font-weight: bold;
 
       &.selected {
         color: rgb(123, 123, 123);
-        font-weight: 500;
       }
     }
     > a {
