--- a/src/components/InnerPageLayout.scss
+++ b/src/components/InnerPageLayout.scss
@@ -39,6 +39,8 @@
 
       .event-submenu {
         margin: 0 0 15px 0;
+        font-size: 0.7em;
+
         > a {
           margin: 0;
         }
