--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -52,7 +52,7 @@ body {
     background-image: url(/img/sky-mobile.jpg);
     background-position: top;
     background-repeat: no-repeat;
-    background-size: contain;
+    // background-size: contain;
   }
 
   .section {
