--- a/src/templates/index-page.scss
+++ b/src/templates/index-page.scss
@@ -35,7 +35,7 @@
   .header-text {
     margin: 1.3rem 0.4rem 1.3rem 0;
     font-size: 0.9rem;
-    font-weight: 200;
+    font-weight: bold;
     line-height: 1.3em;
 
     p {
