--- a/src/templates/index-page.scss
+++ b/src/templates/index-page.scss
@@ -46,7 +46,7 @@
 
   .inner-pages-row-underline-display {
     color: black;
-    margin: 1px 0 0 0;
+    margin: 1px 2px 0;
     font-size: 0.7em;
   }
 
